2011-11-02 Pierre Wieser <pwieser@trychlos.org>

	* docs/nact/C/nact-conditions.xml: Replace 'regarding' with
	'regardless'.
	From https://bugzilla.gnome.org/show_bug.cgi?id=660399, reported by
	Gabor Karsay.

2011-11-02 Pierre Wieser <pwieser@trychlos.org>

	* src/io-desktop/nadp-writer.c (nadp_iio_provider_is_able_to_write):
	* src/nact/base-gtk-utils.c (base_gtk_utils_select_file_with_preview):
	* src/nact/nact-assistant-import.c (prepare_confirm):
	* src/nact/nact-clipboard.c (nact_clipboard_dnd_set):
	* src/nact/nact-main-statusbar.c (nact_main_statusbar_set_locked):
	* src/nact/nact-preferences-editor.c (desktop_setup):
	* src/nact/nact-providers-list.c (on_selection_changed):
	* src/test/test-virtuals-without-test.c (first_instance_dispose):
	Remove set but unused variables.

2011-07-25 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: Fix test for nautilus_menu_provider_get_toolbar_items().
	Fix #655237 - Toolbar icons are not created.

2011-07-03 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: Post-release version bump.

	* NEWS: Update before releasing.

	* TODO: Update before releasing.

	* src/utils/na-gconf2key.sh.in:	Update comment.

	* docs/nact/C/nact-conditions.xml:
	* docs/nact/C/nact-execution.xml:
	* docs/nact/C/nact-where.xml:
	Fix #652664 - [doc] couple of spelling and improvement suggestions;
	patch provided by Christian Kirbach.

2011-06-10 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-boxed.c (string_to_array):
	Accepts now both semi-comma-separated list of strings and
	comma-separated between square brackets (à la GConf) from string lists.

	* src/io-xml/naxml-reader.c (slist_to_string):
	Formats string list as a semi-comma-separated list of strings for NABoxed.

	* src/utils/na-gconf2key.sh.in: No more obsolete the GConf reading,
	as it may sometimes be needed to re-migrate a newly inserted item.

	* src/io-gconf/nagp-reader.c (get_boxed_from_path):
	Only allocate a new box when a non-null value has been read.
