@@ -1,7 +1,7 @@
 <sect2 id="usage-menus">
   <title>Organizing actions in menus</title>
   <para>
-    As your list of actions will grow, you most probably will want organize
+    As your list of actions will grow, you most probably will want to organize
     them into menus, submenus, and so on.
   </para>
   <para>
