@@ -78,12 +78,12 @@
       <listitem>
         <para>
           Cut the profile to be moved, select the profile before which
-          you want yout cut profile to be inserted, and paste it.
+          you want your cut profile to be inserted, and paste it.
         </para>
       </listitem>
       <listitem>
         <para>
-          Cick on the profile to be moved, and drag it to its right place.
+          Click on the profile to be moved, and drag it to its right place.
         </para>
       </listitem>
     </orderedlist>
